<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>de.dfki.step</groupId>
    <artifactId>parent</artifactId>
    <packaging>pom</packaging>
    <name>stepDP-Core</name>
    <version>1.0.2-SNAPSHOT</version>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <step-dp.version>1.0.2</step-dp.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <source>10</source>
                    <target>10</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.3</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <!--<phase>deploy</phase>-->
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin> 
              <artifactId>maven-javadoc-plugin</artifactId>
              <version>3.2.0</version>
              <configuration>
                  <detectJavaApiLink>false</detectJavaApiLink>
              </configuration>
              <executions> 
                <execution> 
                  <id>attach-javadocs</id>
                  <phase>deploy</phase>
                  <goals><goal>jar</goal></goals> 
                </execution> 
              </executions> 
            </plugin>  
            <plugin>
            <!-- explicitly define maven-deploy-plugin after other to force exec order -->
            <artifactId>maven-deploy-plugin</artifactId>
            <version>3.0.0-M1</version>
            <executions>
              <execution>
                <id>deploy</id>
                <phase>deploy</phase>
                <goals><goal>deploy</goal></goals>
              </execution>
            </executions>
          </plugin>
        </plugins>
      <extensions>
      <!-- Enabling the use of FTP -->
      <extension>
        <groupId>org.apache.maven.wagon</groupId>
         <artifactId>wagon-ftp</artifactId>
         <version>3.4.1</version>
      </extension>
    </extensions>
    </build>
    
    <modules>
        <module>core</module>
        <!--<module>sandbox</module>-->
        <module>spring</module>
        <!--<module>rasa</module>-->
        <module>example</module>
        <!--<module>tecs-plugin</module>-->
    </modules>

    <!--define versions for dependencies such that sub modules don't have to specify explicitly-->
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.pcollections</groupId>
                <artifactId>pcollections</artifactId>
                <version>3.0.3</version>
            </dependency>
            <dependency>
                <groupId>com.google.code.gson</groupId>
                <artifactId>gson</artifactId>
                <version>2.8.5</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.7</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>4.4</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>2.6</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>1.7.12</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>2.1.0.RELEASE</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>2.9.7</version>
            </dependency>
            <dependency>
                <groupId>de.dfki.tecs</groupId>
                <artifactId>libtecs</artifactId>
                <version>3.0.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <distributionManagement>
      <repository>
        <id>stepdp-dfki-ftp</id>
        <name>stepDP DFKI Hosting</name>
        <url>ftps://webhosting-intern.dfki.de</url>
        <layout>default</layout>
      </repository>
    </distributionManagement>

</project>